# Log-Analysiser

./: .dockerignore  .gitignore  Agent.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py
app/analyzers/: __init__.py  base.py  llm.py  mock.py  rule_based.py
app/api/: admin.py  routes.py
app/integrations/: __init__.py  base.py  kibana.py  registry.py
app/prompts/: __init__.py  templates.py
app/repositories/: __init__.py  admin_repository.py
app/schemas/: __init__.py  admin.py  analysis.py
app/services/: __init__.py  analysis_service.py  detection_service.py  report_service.py
app/static/: admin.css
app/templates/admin/: detections.html  index.html  integrations.html
app/utils/: __init__.py  log_parser.py
app/workers/: __init__.py  integration_poller.py  kibana_poller.py
log_analysis_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
samples/: analysis_report.md  sample_analysis_result.json
tests/: test_admin.py  test_api.py  test_cli.py  test_parser.py  test_report_service.py  test_rule_based_analyzer.py
