[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analysis-mvp"
version = "0.1.0"
description = "Safe MVP for analyzing operational logs and suggesting fixes without modifying production code."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pymongo>=4.10.0,<5.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
